# libaji_client

./: .gitignore  .gitmodules  COPYING  Makefile.am  README  bootstrap  configure.ac
doc/: .gitignore  Doxyfile
src/h/: aji.h  aji_glibc_sys.h  aji_macros_sys.h  aji_sys.h  gen_string_sys.h  secure_getenv.h  win_type_sys.h
src/jtag/: .gitignore  Makefile.am  jtag_client_aji.cpp  jtag_client_aji.h  jtag_client_chain.cpp  jtag_client_chain.h  jtag_client_hub.cpp  jtag_client_hub.h  jtag_client_link.cpp  jtag_client_link.h  jtag_client_node.cpp  jtag_client_open.cpp  jtag_client_open.h  jtag_common.h  jtag_config_status_win.cpp  jtag_configuration.cpp  jtag_configuration.h  jtag_configuration_file.cpp  jtag_configuration_file.h  jtag_configuration_memory.cpp  jtag_configuration_memory.h  jtag_configuration_win.cpp  jtag_configuration_win.h  jtag_md5_pd.cpp  jtag_md5_pd.h  jtag_message.h  jtag_platform.h  jtag_platform_unix.cpp  jtag_platform_win.cpp  jtag_protocol.cpp  jtag_protocol.h  jtag_raw_fifo.cpp  jtag_raw_fifo.h  jtag_tcpclient.cpp  jtag_tcpclient.h  jtag_tcplink.cpp  jtag_tcplink.h  jtag_tcpsock.cpp  jtag_tcpsock.h  jtag_utils.cpp  (+6 more)
store/examples/: QUARTUS_JTAG_CLIENT_CONFIG.conf
store/safestringlib/: Makefile.am  Makefile.am.safeclib  Makefile.am.safestringlib  Makefile.am.unittests
tools/: jtag-localhost40000.conf
